dataset1235/2025-2/1153765216/users/641768463/executions/3138746197_3221148872.log
== SUBMISSION (2025-08-17 19:25:22)
-- CODE: 
40 + 35 = 75
print ("75")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:12:59)
-- CODE: 
numero = resultado
40 + 35 = 75 numero
print (resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 numero
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 numero
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:09:23)
-- CODE: 
numero = resultado
40 + 35 = 75
print (resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:03:14)
-- CODE: 
40 + 35 = 75
print ("75")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:12:30)
-- CODE: 
numero = resultado
40 + 35 = 75 resltado
print (resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 resltado
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 resltado
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:20:46)
-- CODE: 
Resultado = 40 + 35 
print (Resultado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:08:59)
-- CODE: 
numero = resultado
40 + 35 = 75
print (numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:05:16)
-- CODE: 
40 + 35 = 75
print (75)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:09:01)
-- CODE: 
numero = resultado
40 + 35 = 75
print (numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:09:34)
-- CODE: 
numero = resultado
40 + 35 = 75
print (numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:05:49)
-- CODE: 
40 + 35 = 75
print (40 + 35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:08:57)
-- CODE: 
numero = resultado
40 + 35 = 75
print (numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:03:49)
-- CODE: 
40 + 35 = 75
print (75)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:12:48)
-- CODE: 
numero = resultado
40 + 35 = 75 numero
print (mumero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 numero
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 numero
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:10:48)
-- CODE: 
numero = resultado
40 + 35 = 75 (numero)
print (numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 (numero)
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 (numero)
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:20:23)
-- CODE: 
Resultado = 40 + 35 = 75
print (Resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    Resultado = 40 + 35 = 75
                ^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    Resultado = 40 + 35 = 75
                ^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:06:04)
-- CODE: 
40 + 35 = 75
print ('75')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:05:15)
-- CODE: 
40 + 35 = 75
print (75)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:10:17)
-- CODE: 
numero = resultado
40 + 35 = 75 (resultado)
print (numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 (resultado)
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 2
    40 + 35 = 75 (resultado)
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
